# dapper-lang

./: Cargo.toml  README.md
examples/: CLOSURES.md  README.md  closure_simple.dpr  closure_simple.ll  closure_syntax.dpr  closures.dpr  error.dpr  hello.dpr  hello.ll  option_enum.dap  polymorphic.dpr  test_bool.dpr  test_comparison.dpr  test_float.dpr  test_float_comparison.dpr  test_if_else.dpr  test_mixed_types.dpr  test_nested_if.dpr  test_string.dpr  test_unit.dpr  tree_enum.dap
src/: ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  parser.lalrpop  typechecker.rs  types.rs
tests/: integration_test.rs
