[package]
name = "dapper"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
logos = "0.16"
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
inkwell = { version = "0.7.0", features = ["llvm20-1"] }
clap = { version = "4.5", features = ["derive"] }
